# ai-scaffolding

./: AGENTS.md  CLAUDE.md  LICENSE  PLAN.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/rules/: architecture-boundaries.md  basic-commands.md  best-practices.md  commits-cicd.md  minimal-changes.md  security.md  tdd-enforcement.md
.cursor/rules/: base.mdc  basic-commands.mdc  best-practices.mdc  commits-cicd.mdc  minimal-changes.mdc  security.mdc  tdd-enforcement.mdc
.github/workflows/: ci.yml
docs/: cursor-config.md
src/ai_scaffolding/: __init__.py  __main__.py  cli.py  generator.py  prompts.py
src/ai_scaffolding/templates/claude/: base.md.j2
src/ai_scaffolding/templates/claude/rules/: best-practices.md.j2  minimal-changes.md.j2
src/ai_scaffolding/templates/codex/: base.md.j2
src/ai_scaffolding/templates/cursor/: base.mdc.j2
src/ai_scaffolding/templates/cursor/rules/: best-practices.mdc.j2
src/aiscaffold/: __init__.py  __main__.py  cli.py  generator.py  prompts.py
src/aiscaffold/templates/claude/: base.md.j2
src/aiscaffold/templates/claude/rules/: best-practices.md.j2  boundaries.md.j2  commits-cicd.md.j2  minimal-changes.md.j2  security.md.j2  tdd.md.j2
src/aiscaffold/templates/codex/: base.md.j2
src/aiscaffold/templates/cursor/: base.mdc.j2
src/aiscaffold/templates/cursor/rules/: best-practices.mdc.j2  boundaries.mdc.j2  commits-cicd.mdc.j2  minimal-changes.mdc.j2  security.mdc.j2  tdd.mdc.j2
tests/: test_cli.py  test_generator.py  test_prompts.py  test_templates.py
