[project]
name = "aiscaffold"
version = "0.1.0"
description = "CLI tool to scaffold AI coding rules for Claude, Cursor, and Codex"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
    "questionary>=2.0",
]

[project.scripts]
aiscaffold = "aiscaffold.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aiscaffold"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
